# iFeng

./: README.md  gradle.properties  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/llamachat/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/iphone/huchenfeng/: AppDatabase.kt  ChatDao.kt  ChatMessage.kt  ChatSession.kt  ChatViewModel.kt  ChatViewModelFactory.kt  LlamaEngine.kt  MainActivity.kt  SettingsManager.kt  UriUtils.kt
app/src/main/java/com/iphone/huchenfeng/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_apple_logo.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/llamachat/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
